// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUITooltip allows for different trigger components to be passed 1`] = `
<span
  className="xui-tooltip"
>
  <span
    aria-describedby="test"
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onKeyDown={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    style={
      Object {
        "textDecoration": "underline",
      }
    }
  >
    look at what we have
  </span>
  <span
    className="xui-positioningInline"
    data-automationid={undefined}
    style={
      Object {
        "flexDirection": "column",
        "top": undefined,
      }
    }
  >
    <span
      aria-hidden={true}
      className="xui-tooltip--tip"
      data-automationid={undefined}
      id="test"
      role="tooltip"
      style={
        Object {
          "marginLeft": null,
          "marginRight": null,
          "maxHeight": null,
          "maxWidth": null,
          "width": null,
        }
      }
    >
      Tip goes here
    </span>
  </span>
</span>
`;

exports[`XUITooltip include an automation-id 1`] = `
<span
  className="xui-tooltip"
>
  <a
    aria-describedby="test"
    href="javascript:void(0);"
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onKeyDown={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    A link
  </a>
  <span
    className="xui-positioningInline"
    data-automationid="test-tooltip"
    style={
      Object {
        "flexDirection": "column",
        "top": undefined,
      }
    }
  >
    <span
      aria-hidden={true}
      className="xui-tooltip--tip"
      data-automationid="test-tooltip--tooltip"
      id="test"
      role="tooltip"
      style={
        Object {
          "marginLeft": null,
          "marginRight": null,
          "maxHeight": null,
          "maxWidth": null,
          "width": null,
        }
      }
    >
      Tip goes here
    </span>
  </span>
</span>
`;

exports[`XUITooltip include an id, if provided 1`] = `
<span
  className="xui-tooltip"
>
  <a
    aria-describedby="test-tooltip-id"
    href="javascript:void(0);"
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onKeyDown={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    A link
  </a>
  <span
    className="xui-positioningInline"
    data-automationid={undefined}
    style={
      Object {
        "flexDirection": "column",
        "top": undefined,
      }
    }
  >
    <span
      aria-hidden={true}
      className="xui-tooltip--tip"
      data-automationid={undefined}
      id="test-tooltip-id"
      role="tooltip"
      style={
        Object {
          "marginLeft": null,
          "marginRight": null,
          "maxHeight": null,
          "maxWidth": null,
          "width": null,
        }
      }
    >
      Tip goes here
    </span>
  </span>
</span>
`;

exports[`XUITooltip include provided classNames 1`] = `
<span
  className="xui-tooltip"
>
  <a
    aria-describedby="test"
    href="javascript:void(0);"
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onKeyDown={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    A link
  </a>
  <span
    className="xui-positioningInline test-tooltip-class"
    data-automationid={undefined}
    style={
      Object {
        "flexDirection": "column",
        "top": undefined,
      }
    }
  >
    <span
      aria-hidden={true}
      className="test-tooltip-class xui-tooltip--tip"
      data-automationid={undefined}
      id="test"
      role="tooltip"
      style={
        Object {
          "marginLeft": null,
          "marginRight": null,
          "maxHeight": null,
          "maxWidth": null,
          "width": null,
        }
      }
    >
      Tip goes here
    </span>
  </span>
</span>
`;

exports[`XUITooltip include provided wrapperClassNames 1`] = `
<span
  className="test-tooltip-wrapperClass xui-tooltip"
>
  <a
    aria-describedby="test"
    href="javascript:void(0);"
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onKeyDown={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    A link
  </a>
  <span
    className="xui-positioningInline"
    data-automationid={undefined}
    style={
      Object {
        "flexDirection": "column",
        "top": undefined,
      }
    }
  >
    <span
      aria-hidden={true}
      className="xui-tooltip--tip"
      data-automationid={undefined}
      id="test"
      role="tooltip"
      style={
        Object {
          "marginLeft": null,
          "marginRight": null,
          "maxHeight": null,
          "maxWidth": null,
          "width": null,
        }
      }
    >
      Tip goes here
    </span>
  </span>
</span>
`;

exports[`XUITooltip renders correctly 1`] = `
<span
  className="xui-tooltip"
>
  <a
    aria-describedby="test"
    href="javascript:void(0);"
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onKeyDown={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    A link
  </a>
  <span
    className="xui-positioningInline"
    data-automationid={undefined}
    style={
      Object {
        "flexDirection": "column",
        "top": undefined,
      }
    }
  >
    <span
      aria-hidden={true}
      className="xui-tooltip--tip"
      data-automationid={undefined}
      id="test"
      role="tooltip"
      style={
        Object {
          "marginLeft": null,
          "marginRight": null,
          "maxHeight": null,
          "maxWidth": null,
          "width": null,
        }
      }
    >
      Tip goes here
    </span>
  </span>
</span>
`;

exports[`XUITooltip sets maxHeight 1`] = `
<span
  className="xui-tooltip"
>
  <a
    aria-describedby="test"
    href="javascript:void(0);"
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onKeyDown={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    A link
  </a>
  <span
    className="xui-positioningInline"
    data-automationid={undefined}
    style={
      Object {
        "flexDirection": "column",
        "top": undefined,
      }
    }
  >
    <span
      aria-hidden={true}
      className="xui-tooltip--tip"
      data-automationid={undefined}
      id="test"
      role="tooltip"
      style={
        Object {
          "marginLeft": null,
          "marginRight": null,
          "maxHeight": null,
          "maxWidth": null,
          "width": null,
        }
      }
    >
      Tip goes here
    </span>
  </span>
</span>
`;

exports[`XUITooltip sets maxWidth 1`] = `
<span
  className="xui-tooltip"
>
  <a
    aria-describedby="test"
    href="javascript:void(0);"
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onKeyDown={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    A link
  </a>
  <span
    className="xui-positioningInline"
    data-automationid={undefined}
    style={
      Object {
        "flexDirection": "column",
        "top": undefined,
      }
    }
  >
    <span
      aria-hidden={true}
      className="xui-tooltip--tip"
      data-automationid={undefined}
      id="test"
      role="tooltip"
      style={
        Object {
          "marginLeft": null,
          "marginRight": null,
          "maxHeight": null,
          "maxWidth": null,
          "width": null,
        }
      }
    >
      Tip goes here
    </span>
  </span>
</span>
`;

exports[`XUITooltip sets visibility classes, if set to be visible 1`] = `
<span
  className="xui-tooltip xui-tooltip-tipopen"
>
  <a
    aria-describedby="test"
    href="javascript:void(0);"
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onKeyDown={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    A link
  </a>
  <span
    className="xui-positioningInline"
    data-automationid={undefined}
    style={
      Object {
        "flexDirection": "column",
        "top": undefined,
      }
    }
  >
    <span
      aria-hidden={false}
      className="xui-tooltip--tip xui-tooltip--tip-open"
      data-automationid={undefined}
      id="test"
      role="tooltip"
      style={
        Object {
          "marginLeft": null,
          "marginRight": -220,
          "maxHeight": null,
          "maxWidth": null,
          "width": null,
        }
      }
    >
      Tip goes here
    </span>
  </span>
</span>
`;
